# amplityper-report

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config.yaml  pyproject.toml  read_zap_report.py  requirements.txt  scratch.ipynb  tox.ini
amplityper_report/: __main__.py  cli.py  compile_data.py  transform_data.py
docs/: index.html  search.js
docs/29419/: read_zap_report.html
docs/amplityper_report/: main.html
resources/: qiaseq_direct_boosted_with_genes.bed
src/: README.md  compile_data.rs  lib.rs
src/amplityper_report/: main.py
src/core/: Cargo.toml  compile_data.rs  glob_expansion.rs  lib.rs
