[package]
name = "amplityper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "amplityper_core"
crate-type = ["cdylib"]
path = "src/core/lib.rs"

[dependencies]
globmatch = "0.3.0"
polars = "0.35.4"
pyo3 = "0.19.0"
