[tool.poetry]
name = "read-zap-report"
version = "0.1.0"
description = "Python module for reporting results from the READ-ZAP viral amplicon phasing pipeline."
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
result = "^0.14.0"
polars = "^0.19.17"
sgkit = "^0.7.0"
scikit-allel = "^1.3.7"
strictyaml = "^1.7.3"
ipykernel = "^6.27.1"
pathlib = "^1.0.1"
quarto = "^0.1.0"
xlsxwriter = "^3.1.9"
icecream = "^2.1.3"
tqdm = "^4.66.1"
xlsx2csv = "^0.8.1"

[tool.poetry.scripts]
"rz_report" = "read_zap_report:main"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
blackdoc = "^0.3.9"
pdoc = "^14.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
