[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "amplityper-report"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "amplityper_report.amplityper_core"
python-source = "amplityper_report"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
cargo-extra-args = ["--features", "pyo3/extension-module"]
locked = true

[tool.poetry]
name = "amplityper-report"
version = "0.1.0"
description = "Python module for reporting results from the Amplityper viral amplicon phasing pipeline."
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
result = "^0.14.0"
polars = "^0.19.17"
strictyaml = "^1.7.3"
pathlib = "^1.0.1"
xlsxwriter = "^3.1.9"
icecream = "^2.1.3"
tqdm = "^4.66.1"
xlsx2csv = "^0.8.1"
pydantic = "^2.5.2"
maturin = "^1.4.0"
plotnine = "^0.12.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
blackdoc = "^0.3.9"
pdoc = "^14.1.0"
mypy = "^1.7.1"
ipykernel = "^6.27.1"
quarto = "^0.1.0"
pre-commit = "^3.6.0"
tox = "^4.11.4"
pytest = "^7.4.3"
codecarbon = "^2.3.2"
just = "^0.8.161"

[tool.poetry.scripts]
"at_report" = "amplityper_report.__main__:main"

[project.scripts]
"at_report" = "amplityper_report.__main__:main"
