[package]
name = "amplityper_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "amplityper_core"
crate-type = ["cdylib"]

[dependencies]
glob-match = "0.2.1"
polars = { version = "0.35.4", features = ["lazy", "csv", "polars-io"]}
polars-io = { version = "0.35.4", features = ["ipc"] }
pyo3 = "0.19.0"
